--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --subtle-text: #8e8f99;
   --accent: #e7e9fc;
   --light: #f4f4fd;
-  --modal-overlay: #2e2f42;
+  --modal-overlay: rgba(46, 47, 66, 0.4);
   --hero-background: #2e2f42;
   --white: #ffffff;
 }
@@ -107,6 +107,33 @@ p {
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
+  position: relative;
+}
+
+.studio::after {
+  content: "";
+  position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--pressed-state);
+  border-radius: 2px;
+  left: 0;
+  bottom: -1px;
+}
+
+.portfolio-link-p::after {
+  content: "";
+  position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--pressed-state);
+  border-radius: 2px;
+  left: 0;
+  bottom: -1px;
 }
 
 .address-link {
@@ -125,11 +152,15 @@ p {
 .nav-link:hover,
 .nav-link:focus {
   color: var(--pressed-state);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
 .address-link:focus {
   color: var(--pressed-state);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top-item {
@@ -197,6 +228,8 @@ p {
   background-color: var(--pressed-state);
   color: var(--white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* strategy */
@@ -406,6 +439,8 @@ p {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--pressed-state);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -461,6 +496,8 @@ p {
 .customers-link:hover {
   border-color: var(--pressed-state);
   fill: var(--pressed-state);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-item {
@@ -545,6 +582,8 @@ p {
 .footer-link:hover,
 .footer-link:focus {
   background-color: var(--success);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon {
   width: 24px;
@@ -613,6 +652,8 @@ p {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-color: transparent;
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-works {
@@ -635,6 +676,29 @@ p {
 
 .portfolio-work-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.portfolio-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-cover-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--light);
+  background-color: var(--primary-brand);
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 40px;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms linear;
 }
 
 .portfolio-work-title {
@@ -666,6 +730,12 @@ p {
 .portfolio-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover .portfolio-cover-text {
+  transform: translateY(0);
 }
 
 .portfolio-bord {
@@ -676,4 +746,69 @@ p {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-overlay);
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  width: 408px;
+  min-height: 576px;
+  background-color: var(--white);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  padding: 32px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  transition: translate 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale (0.7);
+}
+
+.modal-close {
+  display: flex;
+  margin-left: auto;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 24px;
+  height: 24px;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: var(--accent);
+}
+
+.modal-icon {
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
