--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,11 @@ p {
   text-decoration: none;
   font-style: normal;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio {
+  color: var(--pressed-state);
 }
 
 .studio::after {
@@ -147,20 +152,17 @@ p {
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus {
   color: var(--pressed-state);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
 .address-link:focus {
   color: var(--pressed-state);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top-item {
@@ -221,15 +223,12 @@ p {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   border-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--pressed-state);
-  color: var(--white);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* strategy */
@@ -434,13 +433,12 @@ p {
   height: 40px;
   background-color: var(--primary-brand);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--pressed-state);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -490,14 +488,13 @@ p {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   fill: var(--subtle-text);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:focus,
 .customers-link:hover {
   border-color: var(--pressed-state);
   fill: var(--pressed-state);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-item {
@@ -577,13 +574,12 @@ p {
   height: 40px;
   background-color: var(--body-text);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
 .footer-link:focus {
   background-color: var(--success);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon {
   width: 24px;
@@ -643,6 +639,9 @@ p {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   padding: 12px 24px;
+
+  transition: background-color, color, box-shadow,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -652,8 +651,6 @@ p {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-color: transparent;
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-works {
@@ -698,7 +695,7 @@ p {
   height: 100%;
 
   transform: translateY(100%);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-work-title {
@@ -724,14 +721,13 @@ p {
 .portfolio-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:focus,
 .portfolio-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover .portfolio-cover-text {
@@ -748,6 +744,9 @@ p {
   border-right: 1px solid #e7e9fc;
 }
 
+.portfolio-link-p {
+  color: var(--pressed-state);
+}
 .backdrop {
   position: fixed;
   top: 0;
@@ -793,15 +792,19 @@ p {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
+  cursor: pointer;
+  background-color: var(--accent);
+  transition: background-color, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
 .modal-close:focus {
-  background-color: var(--accent);
+  background-color: var(--pressed-state);
+  fill: var(--white);
 }
 
 .modal-icon {
