--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,8 @@ p {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   fill: var(--subtle-text);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:focus,
@@ -640,7 +641,9 @@ p {
   border-radius: 4px;
   padding: 12px 24px;
 
-  transition: background-color, color, box-shadow,
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -755,12 +758,13 @@ p {
   background-color: var(--modal-overlay);
 
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .modal {
@@ -798,7 +802,8 @@ p {
   height: 24px;
   cursor: pointer;
   background-color: var(--accent);
-  transition: background-color, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
